--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -22,7 +22,7 @@
           </thead>
           <tbody>
             <% @topics.each do |topic| %>
-              <tr onclick="Turbolinks.visit('<%= forum_topic_path(@forum, topic) %>');" class="pointer">
+              <tr onclick="Turbo.visit('<%= forum_topic_path(@forum, topic) %>');" class="pointer">
                 <th class="text-center"><%= display_topic_status(topic.status) %></th>
                 <td class="subject"><%= topic.title %></td>
                 <td class="author text-center"><%= display_role_user(topic.user) %></td>
@@ -39,4 +39,4 @@
 
 <%= will_paginate @topics, list_classes: %w(pagination justify-content-center), page_links: false %>
 
-<%= render file: '/topics/new' %>
+<%= render template: 'topics/new' %>
