--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-4">
   <div class="container">
-  <%= link_to "ForuMia", Role.find(1) ? forum_path(Forum.first) : root_path, class: "navbar-brand" %>
+  <%= link_to "ForuMia", Role.exists?(1) ? forum_path(Forum.first) : root_path, class: "navbar-brand" %>
     
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -81,7 +81,7 @@
             <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
               <%= fa_icon "cog", class: "mr-1" %> Paramètre
             <% end %>
-              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+              <%= button_to destroy_user_session_path, method: :delete, class: "dropdown-item", form: { "data-turbo" => false } do %>
                 <%= fa_icon "sign-out-alt", class: "mr-1" %> Déconnexion
               <% end %>
             <% end %>
