--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h4 class="card-title"><%= fa_icon "user-graduate", class:" mr-1" %> Promouvoir un membre</h4>
         <div class="card-text mt-3">
-          <%= simple_form_for @user, url: promote_staff_index_path, wrapper: :input_group do |f| %>
+          <%= simple_form_for @user, url: promote_staff_index_path, wrapper: :input_group, data: { turbo: false } do |f| %>
             <%= f.input :id, collection: User.all, label_method: :username, value_method: :id, as: :select, wrapper: :input_group_select, prepend: fa_icon("users"), include_blank: "Membre" %>
             <%= f.input :role_id, collection: Role.all.where.not(id: 1), label_method: :label, value_method: :id, as: :select, wrapper: :input_group_select, prepend: fa_icon("graduation-cap"), include_blank: "Rôle" %>
             <%= f.button :submit, value: "Valider", class: "btn-primary" %>
