--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,7 +2,8 @@
   as: resource_name,
   url: registration_path(resource_name),
   wrapper: :input_group,
-  html: { method: :put } do |f| %>
+  html: { method: :put },
+  data: { turbo: false } do |f| %>
 
   <%= render partial: "users/shared/error_messages", locals: { f: f } %>
 
