--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), wrapper: :input_group do |f| %>
+<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), wrapper: :input_group, data: { turbo: false } do |f| %>
  
   <% if !params[:commit] %>
     <div class="alert alert-info">
